--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -223,6 +223,47 @@
         justify-content: center;
     }
 
+    // Input with SVG icon
+    .k-input-icon,
+    .k-input-validation-icon,
+    .k-input-loading-icon {
+        &.k-svg-icon > svg,
+        &.k-icon-md > svg {
+            width: $kendo-icon-size-md;
+            height: $kendo-icon-size-md;
+        }
+
+        &.k-icon-xs > svg {
+            width: $kendo-icon-size-xs;
+            height: $kendo-icon-size-xs;
+        }
+
+        &.k-icon-sm > svg {
+            width: $kendo-icon-size-sm;
+            height: $kendo-icon-size-sm;
+        }
+
+        &.k-icon-lg > svg {
+            width: $kendo-icon-size-lg;
+            height: $kendo-icon-size-lg;
+        }
+
+        &.k-icon-xl > svg {
+            width: $kendo-icon-size-xl;
+            height: $kendo-icon-size-xl;
+        }
+
+        &.k-icon-xxl > svg {
+            width: $kendo-icon-size-xxl;
+            height: $kendo-icon-size-xxl;
+        }
+
+        &.k-icon-xxxl > svg {
+            width: $kendo-icon-size-xxxl;
+            height: $kendo-icon-size-xxxl;
+        }
+    }
+
 
     // Clear value
     .k-clear-value {
