--- a/packages/bootstrap/scss/fab/_theme.scss
+++ b/packages/bootstrap/scss/fab/_theme.scss
@@ -16,9 +16,9 @@
     @each $name, $color in $kendo-fab-theme-colors {
         .k-fab-solid-#{$name}:hover,
         .k-fab-solid-#{$name}.k-hover {
-            border-color: k-try-darken( $color, 10% );
-            color: k-contrast-color( k-try-darken( $color, 7.5% ) );
-            background-color: k-try-darken( $color, 7.5% );
+            border-color: k-color-darken( $color, 10% );
+            color: k-contrast-color( k-color-darken( $color, 7.5% ) );
+            background-color: k-color-darken( $color, 7.5% );
         }
     }
 
@@ -38,9 +38,9 @@
         .k-fab-solid-#{$name}.k-active,
         .k-fab-solid-#{$name}.k-selected {
             @include box-shadow( $kendo-fab-active-shadow );
-            border-color: k-try-darken( $color, 12.5% );
-            color: k-contrast-color( k-try-darken( $color, 10% ) );
-            background-color: k-try-darken( $color, 10% );
+            border-color: k-color-darken( $color, 12.5% );
+            color: k-contrast-color( k-color-darken( $color, 10% ) );
+            background-color: k-color-darken( $color, 10% );
         }
     }
 
@@ -79,11 +79,11 @@
     .k-fab-item:hover .k-fab-item-icon,
     .k-fab-item.k-hover .k-fab-item-icon {
         @include box-shadow( $kendo-fab-item-shadow );
-        outline: $kendo-fab-border-width solid k-try-darken( $kendo-fab-item-icon-border, 10% );
+        outline: $kendo-fab-border-width solid k-color-darken( $kendo-fab-item-icon-border, 10% );
         outline-offset: -$kendo-fab-border-width;
-        border-color: k-try-darken( $kendo-fab-item-icon-border, 10% );
-        color: k-contrast-color( k-try-darken( $kendo-fab-item-icon-bg, 7.5% ) );
-        background-color: k-try-darken( $kendo-fab-item-icon-bg, 7.5% );
+        border-color: k-color-darken( $kendo-fab-item-icon-border, 10% );
+        color: k-contrast-color( k-color-darken( $kendo-fab-item-icon-bg, 7.5% ) );
+        background-color: k-color-darken( $kendo-fab-item-icon-bg, 7.5% );
     }
 
     // Focus state
@@ -100,11 +100,11 @@
     .k-fab-item:active .k-fab-item-icon,
     .k-fab-item.k-active .k-fab-item-icon {
         @include box-shadow( $kendo-fab-item-active-shadow );
-        outline: $kendo-fab-border-width solid k-try-darken( $kendo-fab-item-icon-border, 12.5% );
+        outline: $kendo-fab-border-width solid k-color-darken( $kendo-fab-item-icon-border, 12.5% );
         outline-offset: -$kendo-fab-border-width;
-        border-color: k-try-darken( $kendo-fab-item-icon-border, 12.5% );
-        color: k-contrast-color( k-try-darken( $kendo-fab-item-icon-bg, 10% ) );
-        background-color: k-try-darken( $kendo-fab-item-icon-bg, 10% );
+        border-color: k-color-darken( $kendo-fab-item-icon-border, 12.5% );
+        color: k-contrast-color( k-color-darken( $kendo-fab-item-icon-bg, 10% ) );
+        background-color: k-color-darken( $kendo-fab-item-icon-bg, 10% );
     }
 
     // Disabled state
