--- a/packages/fluent/scss/card/_layout.scss
+++ b/packages/fluent/scss/card/_layout.scss
@@ -53,15 +53,19 @@
 
     // Card title
     .k-card-title {
-        @extend .k-h5;
+        font-size: var( --kendo-card-title-font-size, #{$kendo-card-title-font-size} );
+        font-family: var( --kendo-card-title-font-family, #{$kendo-card-title-font-family} );
+        line-height: var( --kendo-card-title-line-height, #{$kendo-card-title-line-height} );
         font-weight: var( --kendo-card-title-font-weight, #{$kendo-card-title-font-weight} );
-        margin-block-end: var( --kendo-card-title-margin-bottom, #{$kendo-card-title-margin-bottom} );
+        margin: 0 0 var( --kendo-card-title-margin-bottom, #{$kendo-card-title-margin-bottom} );
     }
 
 
     // Card subtitle
     .k-card-subtitle {
-        @extend .k-h6;
+        font-size: var( --kendo-card-subtitle-font-size, #{$kendo-card-subtitle-font-size} );
+        font-family: var( --kendo-card-subtitle-font-family, #{$kendo-card-subtitle-font-family} );
+        line-height: var( --kendo-card-subtitle-line-height, #{$kendo-card-subtitle-line-height} );
         font-weight: var( --kendo-card-title-font-weight, #{$kendo-card-title-font-weight} );
         margin-block-end: var( --kendo-card-subtitle-margin-bottom, #{$kendo-card-subtitle-margin-bottom} );
 
@@ -73,7 +77,9 @@
 
     // Header
     .k-card-header {
-        @extend .k-h5;
+        font-size: var( --kendo-card-header-font-size, #{$kendo-card-header-font-size} );
+        font-family: var( --kendo-card-header-font-family, #{$kendo-card-header-font-family} );
+        line-height: var( --kendo-card-header-line-height, #{$kendo-card-header-line-height} );
         font-weight: var( --kendo-card-title-font-weight, #{$kendo-card-title-font-weight} );
         margin: 0;
         padding-inline: var( --kendo-card-header-padding-x, #{$kendo-card-header-padding-x} );
