--- a/packages/fluent/scss/mediaplayer/_layout.scss
+++ b/packages/fluent/scss/mediaplayer/_layout.scss
@@ -40,6 +40,7 @@
 
     // Title bar
     .k-mediaplayer-titlebar {
+        font-size: var( --kendo-media-player-title-font-size, #{$kendo-media-player-title-font-size} );
         padding-inline: var( --kendo-media-player-titlebar-padding-x, #{$kendo-media-player-titlebar-padding-x} );
         padding-block: var( --kendo-media-player-titlebar-padding-y, #{$kendo-media-player-titlebar-padding-y} );
         position: absolute;
