--- a/packages/fluent/scss/mediaplayer/_variables.scss
+++ b/packages/fluent/scss/mediaplayer/_variables.scss
@@ -32,6 +32,9 @@ $kendo-media-player-overlay-bg: get-theme-color-var( neutral-130 ) !default;
 /// @group mediaplayer
 $kendo-media-player-quality-border: get-theme-color-var( neutral-110 ) !default;
 
+/// Media player title font size.
+/// @group mediaplayer
+$kendo-media-player-title-font-size: var( --kendo-font-size-xl, inherit ) !default;
 /// Mediaplayer titlebar horizontal padding.
 /// @group mediaplayer
 $kendo-media-player-titlebar-padding-x: map.get( $kendo-spacing, 2 ) !default;
