--- a/packages/fluent/scss/calendar/_theme.scss
+++ b/packages/fluent/scss/calendar/_theme.scss
@@ -141,6 +141,29 @@
             .k-calendar-navigation {
                 box-shadow: inset 1px 0 var( --kendo-calendar-navigation-border, #{$kendo-calendar-navigation-border} );
             }
+
+            .k-calendar-td {
+
+                &.k-range-start:hover .k-link,
+                &.k-range-start.k-hover .k-link {
+                    --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-end-range-hover-shadow, #{$kendo-calendar-end-range-hover-shadow} );
+
+                }
+
+                &.k-range-mid:last-child:hover .k-link,
+                &.k-range-mid:last-child.k-hover .k-link,
+                &.k-range-end:hover .k-link,
+                &.k-range-end.k-hover .k-link {
+                    --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-start-range-hover-shadow, #{$kendo-calendar-start-range-hover-shadow} );
+                }
+
+                &.k-range-mid:first-child:hover .k-link,
+                &.k-range-mid:first-child.k-hover .k-link,
+                &.k-alt + .k-range-mid:hover .k-link,
+                &.k-alt + .k-range-mid.k-hover .k-link {
+                    --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-end-range-hover-shadow, #{$kendo-calendar-end-range-hover-shadow} );
+                }
+            }
         }
 
         // Invalid
@@ -181,6 +204,36 @@
             &.k-disabled {
                 --kendo-calendar-cell-text: var( --kendo-disabled-text, inherit );
             }
+
+            &:hover .k-link,
+            &.k-hover .k-link {
+                background-color: var( --kendo-calendar-cell-selected-hover-bg, #{$kendo-calendar-cell-selected-hover-bg} );
+            }
+        }
+
+        &.k-range-start:hover .k-link,
+        &.k-range-start.k-hover .k-link {
+            --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-start-range-hover-shadow, #{$kendo-calendar-start-range-hover-shadow} );
+
+        }
+
+        &.k-range-mid:hover .k-link,
+        &.k-range-mid.k-hover .k-link {
+            --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-mid-range-hover-shadow, #{$kendo-calendar-mid-range-hover-shadow} );
+        }
+
+        &.k-range-mid:last-child:hover .k-link,
+        &.k-range-mid:last-child.k-hover .k-link,
+        &.k-range-end:hover .k-link,
+        &.k-range-end.k-hover .k-link {
+            --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-end-range-hover-shadow, #{$kendo-calendar-end-range-hover-shadow} );
+        }
+
+        &.k-range-mid:first-child:hover .k-link,
+        &.k-range-mid:first-child.k-hover .k-link,
+        &.k-alt + .k-range-mid:hover .k-link,
+        &.k-alt + .k-range-mid.k-hover .k-link {
+            --INTERNAL--kendo-calendar-cell-link-shadow: var( --kendo-calendar-start-range-hover-shadow, #{$kendo-calendar-start-range-hover-shadow} );
         }
     }
 
