--- a/packages/fluent/scss/calendar/_variables.scss
+++ b/packages/fluent/scss/calendar/_variables.scss
@@ -260,6 +260,15 @@ $kendo-calendar-range-text: inherit !default;
 /// Border color of the range selection in the calendar.
 /// @group calendar
 $kendo-calendar-range-border: get-theme-color-var( neutral-130 ) !default;
+/// Hover shadow of the start range selection in the calendar.
+/// @group calendar
+$kendo-calendar-start-range-hover-shadow: inset 1px -1px 0 0 get-theme-color-var( neutral-130 ), inset 0 1px 0 0 get-theme-color-var( neutral-130 ) !default;
+/// Hover shadow of the mid range selection in the calendar.
+/// @group calendar
+$kendo-calendar-mid-range-hover-shadow: inset 0 -1px 0 0 get-theme-color-var( neutral-130 ), inset 0 1px 0 0 get-theme-color-var( neutral-130 ) !default;
+/// Hover shadow of the end range selection in the calendar.
+/// @group calendar
+$kendo-calendar-end-range-hover-shadow: inset -1px -1px 0 0 get-theme-color-var( neutral-130 ), inset 0 1px 0 0 get-theme-color-var( neutral-130 ) !default;
 
 
 // Calendar sizes
