fix(utils): set the font-size property in $kendo-utils to $kendo-font-sizes

--- a/packages/utils/scss/_variables.scss
+++ b/packages/utils/scss/_variables.scss
@@ -496,7 +496,7 @@ $kendo-utils: (
 
     // Typography
     "font-family": (),
-    "font-size": (),
+    "font-size": $kendo-font-sizes,
     "font-smoothing": (),
     "font-style": (
         italic: italic,
